feat: 추천 상품 API response